--- a/popup.css
+++ b/popup.css
@@ -1,35 +1,35 @@
-*
-{
-	color:#EBBC4A;
-	background-color:#262626;
+@font-face {
+    font-family: coda_regular;
+    src: url('lib/Coda/coda_regular.ttf');
 }
 
-body
-{
-	min-width: 500px;
-}
-
-body.screenshot
-{
-	min-width:357px;
-	overflow-x:hidden;
-	border: 1px solid #EBBC4A;  
-	font-family: coda_regular, arial, helvetica, sans-serif;
-	font-size: 15px;
+html, body {
+    color:#EBBC4A;
+    background-color:#262626;
+    min-width: 500px;
+    font-family: coda_regular, arial, helvetica, sans-serif;;
 }
 
 img
 {
-	width: 30px;
-	height: 30px;
+    width: 30px;
+    height: 30px;
+}
+
+body.screenshot
+{
+    min-width:357px;
+    overflow-x:hidden;
+    border: 1px solid #EBBC4A;
+    font-size: 15px;
 }
 
 img.screenshot
 {
-	width: auto;
-	height: auto;
-	max-width:80%; 
-	max-height:80%;
+    width: auto;
+    height: auto;
+    max-width:80%;
+    max-height:80%;
     display: block;
     margin-left: auto;
     margin-right: auto;
@@ -37,14 +37,14 @@ img.screenshot
 
 .screenshot>h2
 {
-	text-align:center;
+    text-align:center;
 }
 
 .horizontalFlex {
     display: -webkit-box;
-    -webkit-box-align:center; /*This makes it so the icons shift vertically if the center text is long.*/
+    -webkit-box-align: center; /*This makes it so the icons shift vertically if the center text is long.*/
 }
- 
+
 .box1 {
     -webkit-box-flex: 1;
 }
@@ -55,61 +55,38 @@ img.screenshot
 
 .menuRow:hover
 {
-	background-color:#3A3F44;
+    background-color:#3A3F44;
 }
 .menuRow:hover>img
 {
-	background-color:#3A3F44;
+    background-color:#3A3F44;
 }
 .menuRow:hover>div
 {
-	background-color:#3A3F44;
+    background-color:#3A3F44;
 }
 #main_menu
 {
-	border: 1px solid #EBBC4A;
+    border: 1px solid #EBBC4A;
 }
 
 fieldset
 {
-	border: 1px solid #EBBC4A;
-	padding: 0;
-	margin: 0;
-	margin-top: 4;
+    border: 1px solid #EBBC4A;
+    padding: 0;
+    margin: 0;
+    margin-top: 4;
 }
 
 legend
 {
-	border: 1px solid #EBBC4A;
-	margin-left: 4px;
-}
-
-#overlay {
-visibility:hidden;
-position:absolute;
-left:0;
-top:0;
-width:100%;
-height:100%;
-text-align:center;
-z-index:1000;
-}
-
-#saveViewPage, #shareLinkPage
-{
-	width:350px;
-	margin:30px auto;
-	display: none;
+    border: 1px solid #EBBC4A;
+    margin-left: 4px;
 }
 
 input {
-width:400px;
-background-color:#3A3F44;
-color:#EBBC4A;
-border-color:#EBBC4A;
-}
-
-input.directLink
-{
-	width: 200px;
+    width:400px;
+    background-color:#3A3F44;
+    color:#EBBC4A;
+    border-color:#EBBC4A;
 }
