--- a/popup.css
+++ b/popup.css
@@ -3,24 +3,19 @@
     src: url('lib/Coda/coda_regular.ttf');
 }
 
-html, body {
+body {
     color:#EBBC4A;
-    background-color:#262626;
+    background-color:#0b0c0d;
     min-width: 500px;
-    font-family: coda_regular, arial, helvetica, sans-serif;;
-}
-
-img
-{
-    width: 30px;
-    height: 30px;
+    font-family: coda_regular, arial, helvetica, sans-serif;
 }
 
 body.screenshot
 {
     min-width:357px;
     overflow-x:hidden;
-    border: 1px solid #EBBC4A;
+    border-width: 1px;
+	border-style: solid;
     font-size: 15px;
 }
 
@@ -33,6 +28,11 @@ img.screenshot
     display: block;
     margin-left: auto;
     margin-right: auto;
+    border-color:#0b0c0d;
+    border-style: dashed;
+	border-width: 1px;
+    
+    -webkit-filter: contrast(100%);
 }
 
 .screenshot>h2
@@ -53,40 +53,147 @@ img.screenshot
     -webkit-box-flex: 0;
 }
 
-.menuRow:hover
-{
-    background-color:#3A3F44;
-}
-.menuRow:hover>img
-{
-    background-color:#3A3F44;
-}
-.menuRow:hover>div
-{
-    background-color:#3A3F44;
-}
 #main_menu
 {
-    border: 1px solid #EBBC4A;
+    border-width: 1px;
+	border-style: solid;
+	border-color: inherit;
 }
 
 fieldset
 {
-    border: 1px solid #EBBC4A;
+	border-width: 1px;
+	border-style: solid;
+	border-color: inherit;
     padding: 0;
     margin: 0;
-    margin-top: 4;
+    margin-top: 4px;
 }
 
 legend
 {
-    border: 1px solid #EBBC4A;
+    border-width: 1px;
+	border-style: solid;
+	border-color: inherit;
     margin-left: 4px;
 }
 
 input {
     width:400px;
     background-color:#3A3F44;
-    color:#EBBC4A;
-    border-color:#EBBC4A;
+    color:inherit;
+}
+
+.resistance
+{
+	color: #00c2ff;
+	border-color: #00c2ff;
+}
+
+.enlightened
+{
+	color: #28f428;
+	border-color: #28f428;
+}
+
+.classic
+{
+	color: #ebbc4a;
+	border-color: #ebbc4a;
+}
+
+.resistance img
+{
+	background-color: #00c2ff;
+}
+
+.enlightened img
+{
+	background-color: #28f428;
+}
+
+.classic img
+{
+	background-color: #ebbc4a;
+}
+
+.resistance  .menuRow:hover, .resistance  .menuRow:hover>div,
+.enlightened .menuRow:hover, .enlightened .menuRow:hover>div, 
+.classic     .menuRow:hover, .classic     .menuRow:hover>div
+{
+	background-color:#262626;
+}
+
+
+/*images and their masks*/
+img
+{
+	width:32px;
+	height:32px;
+	-webkit-mask-size: 100%;
+	-webkit-filter: contrast(250%);
+}
+img.mapView
+{
+	content: url("res/ic_menu_mapmode.png");
+	-webkit-mask-image: url("res/ic_menu_mapmode.png");
+}
+img.trashView
+{
+	content:url("res/ic_menu_delete.png");
+	-webkit-mask-image: url("res/ic_menu_delete.png");
+}
+img.settings
+{
+	content:url("res/equalizer.png");
+	-webkit-mask-image: url("res/equalizer.png");
+}
+
+img.info
+{
+	content:url("res/ic_menu_info_details.png");
+	-webkit-mask-image: url("res/ic_menu_info_details.png");
+}
+
+img.camera
+{
+	content:url("res/ic_menu_camera.png");
+	-webkit-mask-image: url("res/ic_menu_camera.png");
+}
+
+img.share
+{
+	content:url("res/ic_menu_share.png");
+	-webkit-mask-image: url("res/ic_menu_share.png");
+}
+
+img.share2
+{
+	/*content:url("res/ic_menu_share.png");*/
+	-webkit-mask-image: url("res/ic_menu_share.png");
+}
+img.share3
+{
+	/*content:url("res/ic_menu_share.png");*/
+	-webkit-filter: contrast(100%);
+	-webkit-mask-image: url("res/ic_menu_share.png");
+}
+
+img.share4
+{
+	content:url("res/ic_menu_share.png");
+	-webkit-filter: contrast(100%);
+	-webkit-mask-image: url("res/ic_menu_share.png");
+}
+
+img.myLogo
+{
+	content:url("res/ipp5-gray.png");
+	-webkit-mask-image: url("res/ipp5-gray.png");
+}
+
+img.closeButton
+{
+	content:url("res/ic_menu_close_clear_cancel.png");
+	-webkit-mask-image: url("res/ic_menu_close_clear_cancel.png");
 }
